fix: document persistent auth/privilege test failures and troubleshooting steps
Summary:
--------
The backend test suite is failing with numerous 401 (Unauthorized) and 403 (Forbidden) errors across controller, service, and integration test layers. These errors affect endpoints for trades, cashflows, books, users, and more. The failures indicate that authentication or privilege validation is not working as expected in the test environment.

What I have tried:
------------------
- Refactored and cleaned up privilege validation logic in TradeDashboardService and related services.
- Inserted privilege checks using UserPrivilegeValidationEngine and helper methods (resolveCurrentTraderId, resolveCurrentUserRole, hasPrivilege).
- Ensured @PreAuthorize annotations are present and correct in all relevant controllers (e.g., TradeController).
- Verified that test users and roles are set up in test configuration.
- Reviewed and updated test cases in UserPrivilegeIntegrationTest, SummaryIntegrationTest, and other related tests.
- Checked for correct mapping of roles/privileges in both service and controller layers.
Possible Classes to review (TradeDashboardService, UserPrivilegeValidationEngine, SummaryIntegrationTest,AdvanceSearchDashboardIntegrationTest, TradeController &Test, TradeDashboardController &Test  etc ):
Next steps:
-----------
- Please review the above classes for any missing or misconfigured authentication/authorization logic.
- Pay special attention to test setup (mock users, roles, security context) and privilege validation in both service and controller layers.
- Any advice or fixes to get the test suite passing would be appreciated!